Grammatical correction found by Margaret in Judges Registration Page 1.

--- a/OdysseyMvc4/OdysseyMvc4/Views/JudgesRegistration/Page01.cshtml
+++ b/OdysseyMvc4/OdysseyMvc4/Views/JudgesRegistration/Page01.cshtml
@@ -110,7 +110,7 @@
     <li>
         &nbsp; If at any time I find that I cannot attend either event, I will immediately
         notify the coach of the team for which I am judging <span style="font-weight: bold; font-style: italic">and</span> the Region
-        @Model.Config["RegionNumber"] Judges Coordinator. &nbsp;You may contact the Judges Coordinator through our
+        @Model.Config["RegionNumber"] Judges Coordinator. &nbsp;I may contact the Judges Coordinator through our
         <a href="@Model.Config["ContactUsURL"]" target="_blank">Contact Us</a> page.<br />
         &nbsp;
     </li>
