Corrected casing on the word t-shirt in the popup dialog.

--- a/OdysseyMvc4/OdysseyMvc4/Views/JudgesRegistration/Page02.cshtml
+++ b/OdysseyMvc4/OdysseyMvc4/Views/JudgesRegistration/Page02.cshtml
@@ -97,9 +97,9 @@
     for the purpose of running an Odyssey of the Mind tournament.
 </div>
 
-<div id="tshirtDialog" title="Why do we want your T-shirt size?">
+<div id="tshirtDialog" title="Why do we want your t-shirt size?">
     One of the many benefits of being a judge for Odyssey of the Mind is the limited
-    edition, highly collectable, official's T-shirt you receive absolutely for free!
+    edition, highly collectable, official's t-shirt you receive absolutely for free!
 </div>
 
 <div id="ceuCreditDialog" title="How many Continuing Education Units (CEUs) do I get?">
