Made the t-shirt dialog wider on Page 2 of Judges Registration so the title doesn't get cut off. - Added the region name to the "Thank you for volunteering" text.

--- a/OdysseyMvc4/OdysseyMvc4/Views/JudgesRegistration/Page02.cshtml
+++ b/OdysseyMvc4/OdysseyMvc4/Views/JudgesRegistration/Page02.cshtml
@@ -33,7 +33,7 @@
 
         $('#tshirtDialog').dialog({
             autoOpen: false,
-            width: '20%'
+            width: '30%'
         });
 
         $('#ceuCreditDialog').dialog({
@@ -116,7 +116,7 @@
     @ViewBag.Title
 </h1>
 <p>
-    Thank you for volunteering to judge for Odyssey of the Mind. &nbsp;We can't run
+    Thank you for volunteering to judge for @Model.RegionName Odyssey of the Mind. &nbsp;We can't run
     a tournament without people like you! &nbsp; Please provide us with the following
     information in order to complete your registration.
 </p>
