Modified Page01 of Tournament Registration to remove references to Volunteer Registration.
*** THIS IS THE FIRST COMMIT WHERE I REMOVED REFERENCES TO VOLUNTEER REGISTRATION ***

--- a/OdysseyMvc4/OdysseyMvc4/Views/TournamentRegistration/Page01.cshtml
+++ b/OdysseyMvc4/OdysseyMvc4/Views/TournamentRegistration/Page01.cshtml
@@ -71,9 +71,11 @@
     <li>
         &nbsp;&nbsp;&nbsp; Your Judge's first and last names and ID number (from <a href="/Registration/JudgesRegistration" target="_blank">Judges Registration</a>)
     </li>
-    <li>
+    @* TODO: Commented this out; check the database for disabled Volunteer Registration instead - Rob, 12/12/2014. *@
+@*<li>
         &nbsp;&nbsp;&nbsp; Your Volunteer's first and last names and ID number (from <a href="/Registration/VolunteerRegistration" target="_blank">Volunteer Registration</a>)
     </li>
+*@
     <li>
         &nbsp;&nbsp;&nbsp; Name and Grade for each team member
     </li>
