--- a/OdysseyMvc4/OdysseyMvc4/Views/TournamentRegistration/Page09.cshtml
+++ b/OdysseyMvc4/OdysseyMvc4/Views/TournamentRegistration/Page09.cshtml
@@ -63,7 +63,7 @@
         the pages that follow it.
     </p>
     <p style="text-align: center">
-        <input type="button" value="Click To Change The Team's School or Organization" onclick="history.go(-8);" />
+        <input type="button" value="Click To Change The Team's School or Organization" onclick="history.go(-7);" />
     </p>
     <hr />
     <h3>
@@ -97,7 +97,7 @@
         the pages that follow it.
     </p>
     <p style="text-align: center">
-        <input type="button" value="Click To Change The Judge Provided By The Team" onclick="history.go(-6);" />
+        <input type="button" value="Click To Change The Judge Provided By The Team" onclick="history.go(-5);" />
     </p>
     <hr />
     @* TODO: Commented this out; check the database for disabled Volunteer Registration instead - Rob, 12/12/2014. *@
@@ -246,7 +246,7 @@
             </p>
             <p style="text-align: center">
                 <input type="button" value="Click To Change The Coach and/or Alternate Coach Provided By The Team"
-                       onclick="history.go(-6);" />
+                       onclick="history.go(-4);" />
             </p>
             <hr />
             <h3>
@@ -450,7 +450,7 @@
                 the pages that follow it.
             </p>
             <p style="text-align: center">
-                <input type="button" value="Click To Change The Team Members' Grades" onclick="history.go(-5);" />
+                <input type="button" value="Click To Change The Team Members' Grades" onclick="history.go(-3);" />
             </p>
             <hr />
             <h3>
@@ -492,7 +492,7 @@
                 the pages that follow it.
             </p>
             <p style="text-align: center">
-                <input type="button" value="Click To Change The Team's Division" onclick="history.go(-4);" />
+                <input type="button" value="Click To Change The Team's Problem" onclick="history.go(-2);" />
             </p>
             <hr />
             <h3>
@@ -517,7 +517,7 @@
             </p>
             <p style="text-align: center">
                 <input type="button" value="Click To Change Scheduling Issues or Special Considerations the Team May Have"
-                       onclick="history.go(-2);" />
+                       onclick="history.go(-1);" />
             </p>
             <hr />
             <p>
