--- a/OdysseyMvc4/OdysseyMvc4/Views/TournamentRegistration/Page10.cshtml
+++ b/OdysseyMvc4/OdysseyMvc4/Views/TournamentRegistration/Page10.cshtml
@@ -109,25 +109,23 @@
 {
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
         <input type="hidden" name="cmd" value="_s-xclick">
-        <input type="hidden" name="hosted_button_id" value="NYTRFY3YRCJMJ">
+        <input type="hidden" name="hosted_button_id" value="BDF9KV5UNQ3T2">
         <table>
             <tr><td><input type="hidden" name="on0" value="Online Payment">Online Payment</td></tr>
             <tr>
                 <td>
                     <select name="os0">
-                        @* Note: Only include one of the two lines, below. *@
                         <option value="Early Registration Fee -">Early Registration Fee - $75.00 USD</option>
-                        @* <option value="Standard Registration Fee -">Standard Registration Fee - $85.00 USD</option> *@
-                        </select>
-                    </td>
-                </tr>
-                <tr><td><input type="hidden" name="on1" value="Team's Tournament ID">Team's Tournament ID</td></tr>
-                <tr><td><input type="text" name="os1" maxlength="200" value="@Model.TournamentRegistration.TeamID"></td></tr>
-                <tr><td><input type="hidden" name="on2" value="Coach's Last Name">Coach's Last Name</td></tr>
-                <tr><td><input type="text" name="os2" maxlength="200" value="@Model.TournamentRegistration.CoachLastName"></td></tr>
-            </table>
-            <input type="hidden" name="currency_code" value="USD">
-            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_paynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-        </form>
-    }
+                    </select>
+                </td>
+            </tr>
+            <tr><td><input type="hidden" name="on1" value="Team's Tournament ID">Team's Tournament ID</td></tr>
+            <tr><td><input type="text" name="os1" maxlength="200" value="@Model.TournamentRegistration.TeamID"></td></tr>
+            <tr><td><input type="hidden" name="on2" value="Coach's Last Name">Coach's Last Name</td></tr>
+            <tr><td><input type="text" name="os2" maxlength="200" value="@Model.TournamentRegistration.CoachLastName"></td></tr>
+        </table>
+        <input type="hidden" name="currency_code" value="USD">
+        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_paynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+    </form>
+}
