Updated Judges Registration pages from the published website.

--- a/OdysseyMvc4/OdysseyMvc4/Views/JudgesRegistration/Page01.cshtml
+++ b/OdysseyMvc4/OdysseyMvc4/Views/JudgesRegistration/Page01.cshtml
@@ -26,6 +26,12 @@
     Thank you for volunteering to be a judge at our regional tournament.
 </p>
 <p>
+    If you will not be judging at this tournament (at @Model.TournamentLocation), but need the training for another
+    tournament, we will gladly accommodate you, but please do not complete this registration process. &nbsp;Instead,
+    please contact the Region @Model.RegionNumber judges coordinator using our <a href="@Model.Config["ContactUsURL"]" target="_blank">Contact Us</a>
+    page and provide your name and the region for which you will be judging.
+</p>
+<p>
     Because of the important role that our judges play in making such an event happen,
     it is imperative that each judge understand his or her responsibilities before signing
     up.&nbsp; For this reason, we are asking each judge to agree to the information
