Updated JudgesRegistration. - Made changes based on conversation with Margaret Eccles on 13 Nov 2019. - Removed line about scorecheckers needing to bring their own laptops. - Specified that judges must be 18 years old by the tournament date.

--- a/OdysseyMvc4/OdysseyMvc4/Views/JudgesRegistration/Page01.cshtml
+++ b/OdysseyMvc4/OdysseyMvc4/Views/JudgesRegistration/Page01.cshtml
@@ -106,7 +106,7 @@
         &nbsp;
     </li>
     <li>
-        &nbsp; I must be at least 18 years of age.<br />
+        &nbsp; I must be at least 18 years of age by the date of the tournament.<br />
         &nbsp;
     </li>
     <li>
