--- a/OdysseyMvc4/OdysseyMvc4/Views/JudgesRegistration/Page02.cshtml
+++ b/OdysseyMvc4/OdysseyMvc4/Views/JudgesRegistration/Page02.cshtml
@@ -328,8 +328,7 @@
     </p>
     <p>
         <img alt="Required" src="@Url.Content("~/Content/Images/bullet.gif")" width="15" />&nbsp;
-        Are you interested in serving as Scorechecker for one of the Long-Term problems? &nbsp;You must be able to
-        bring a laptop to the tournament that has Microsoft Excel installed and can download files from a USB thumb drive.
+        Are you interested in serving as Scorechecker for one of the Long-Term problems? &nbsp;
         @Html.RadioButtonFor(x => x.WillingToBeScorechecker, "Yes") Yes
         @Html.RadioButtonFor(x => x.WillingToBeScorechecker, "No") No
         @Html.ValidationMessageFor(x => x.WillingToBeScorechecker)
