--- a/OdysseyMvc4/OdysseyMvc4/Views/TournamentRegistration/Page10.cshtml
+++ b/OdysseyMvc4/OdysseyMvc4/Views/TournamentRegistration/Page10.cshtml
@@ -109,13 +109,13 @@
 {
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
         <input type="hidden" name="cmd" value="_s-xclick">
-        <input type="hidden" name="hosted_button_id" value="BDF9KV5UNQ3T2">
+        <input type="hidden" name="hosted_button_id" value="NYTRFY3YRCJMJ">
         <table>
             <tr><td><input type="hidden" name="on0" value="Online Payment">Online Payment</td></tr>
             <tr>
                 <td>
                     <select name="os0">
-                        <option value="Early Registration Fee -">Early Registration Fee - $75.00 USD</option>
+                        <option value="Registration Fee -">Registration Fee - $85.00 USD</option>
                     </select>
                 </td>
             </tr>
