Updated TournamentRegistration Page 8 View. - Updated the wording on team members' special accommodations.

--- a/OdysseyMvc4/OdysseyMvc4/Views/TournamentRegistration/Page08.cshtml
+++ b/OdysseyMvc4/OdysseyMvc4/Views/TournamentRegistration/Page08.cshtml
@@ -43,8 +43,8 @@
         @Html.TextAreaFor(x => x.SchedulingIssues, 6, 100, null)
     </p>
     <p>
-        Does any team member have a disability that the Tournament Director should know
-        about? &nbsp;If so, please describe the disability and suggest a solution/accommodation.
+        Will any team member(s) need some kind of accommodation? &nbsp;Please describe the
+        situation and suggest a solution/accommodation.
     </p>
     <p>
         @Html.TextAreaFor(x => x.SpecialConsiderations, 6, 100, null)
