--- a/OdysseyMvc4/OdysseyMvc4/Views/TournamentRegistration/Page09.cshtml
+++ b/OdysseyMvc4/OdysseyMvc4/Views/TournamentRegistration/Page09.cshtml
@@ -52,7 +52,7 @@
         <label>
             School or Organization Name:
         </label>
-        @Html.TextBox("SchoolName", Model.SchoolName, new { ReadOnly = "readonly" })
+        @Html.TextBox("SchoolName", Model.SchoolName, new { @style="width: 30em", Readonly="readonly" })
     </p>
     <p>
         To change the team's school or organization name, please click the following button.&nbsp;
