Commented out BadCoachEmail.cshtml
- Set Release build to just build OdysseyCoreMvc

--- a/OdysseyRegistration/OdysseyCoreMvc/Views/TournamentRegistration/BadCoachEmail.cshtml
+++ b/OdysseyRegistration/OdysseyCoreMvc/Views/TournamentRegistration/BadCoachEmail.cshtml
@@ -1,4 +1,4 @@
-﻿<%@ Page Title="" Language="C#" MasterPageFile="~/Views/Shared/Site.Master" Inherits="System.Web.Mvc.ViewPage<dynamic>" %>
+﻿@*<%@ Page Title="" Language="C#" MasterPageFile="~/Views/Shared/Site.Master" Inherits="System.Web.Mvc.ViewPage<dynamic>" %>
 
 <asp:Content ID="Content1" ContentPlaceHolderID="TitleContent" runat="server">
 	<%
@@ -26,3 +26,4 @@
 	<p style="text-align: center">
 		<input type="button" value="Return to the Previous Page" id="previousPageButton" name="previousPageButton" onclick="history.go(-1)" /></p>
 </asp:Content>
+*@
