Commented out ResendEmail.cshtml to get build to succeed.

--- a/OdysseyRegistration/OdysseyCoreMvc/Views/TournamentRegistration/ResendEmail.cshtml
+++ b/OdysseyRegistration/OdysseyCoreMvc/Views/TournamentRegistration/ResendEmail.cshtml
@@ -1,4 +1,4 @@
-<%@ Page Title="" Language="C#" MasterPageFile="~/Views/Shared/Site.Master" Inherits="System.Web.Mvc.ViewPage<VaOdysseyMVC2.ViewData.TournamentRegistration.ResendEmailViewData>" %>
+@*<%@ Page Title="" Language="C#" MasterPageFile="~/Views/Shared/Site.Master" Inherits="System.Web.Mvc.ViewPage<VaOdysseyMVC2.ViewData.TournamentRegistration.ResendEmailViewData>" %>
 
 <asp:Content ID="Content1" ContentPlaceHolderID="TitleContent" runat="server">
 	Resend Tournament Registration E-mail
@@ -86,3 +86,4 @@
 		}
 	%>
 </asp:Content>
+*@
