The code builds!
- We may be close to having a working Judges Registration.
- I still need to update all the pages to be Razor Pages.
- We may be able to connect to the database => Test this!

--- a/OdysseyRegistration/OdysseyCoreMvc/Views/CoachesTrainingRegistration/Page01.cshtml
+++ b/OdysseyRegistration/OdysseyCoreMvc/Views/CoachesTrainingRegistration/Page01.cshtml
@@ -105,9 +105,9 @@
         <strong>Coaches Training</strong>
     <li>
         <strong>Location:</strong>
-        @if (!string.IsNullOrWhiteSpace(Model.CoachesTrainingInfo.LocationURL))
+        @if (!string.IsNullOrWhiteSpace(Model.CoachesTrainingInfo.LocationUrl))
         {
-            <a href="@Model.CoachesTrainingInfo.LocationURL" target="_blank">@Model.CoachesTrainingInfo.Location</a>
+            <a href="@Model.CoachesTrainingInfo.LocationUrl" target="_blank">@Model.CoachesTrainingInfo.Location</a>
         }
         else
         {
