--- a/OdysseyRegistration/OdysseyCoreMvc/Views/Shared/TournamentRegistration/EmailPartial.cshtml
+++ b/OdysseyRegistration/OdysseyCoreMvc/Views/Shared/TournamentRegistration/EmailPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OdysseyCoreMvc.ViewData.TournamentRegistration.Page10ViewData
 <div id=contentstart>
-    <p style="text-align: center"><b>You have been assigned Team ID @Model.TournamentRegistration.TeamID.</b></p>
+    <p style="text-align: center"><b>You have been assigned Team ID @Model.TournamentRegistration.TeamId.</b></p>
     <p>Dear Coach @Model.TournamentRegistration.CoachLastName,</p>
     <p>
         You have registered the team listed below.&nbsp; Your judge @*and volunteer are *@is listed below,
@@ -132,7 +132,7 @@
             <td width='305'>
                 <br /><b>ID Number:</b>
             </td>
-            <td width='431'><br />@Model.TournamentRegistration.JudgeID</td>
+            <td width='431'><br />@Model.TournamentRegistration.JudgeId</td>
         </tr>
         <tr>
             <td width='305'>
@@ -479,5 +479,5 @@
         </tr>
     </table>
 
-    <p style="text-align: center"><b>You have been assigned Team ID @Model.TournamentRegistration.TeamID</b></p>
+    <p style="text-align: center"><b>You have been assigned Team ID @Model.TournamentRegistration.TeamId</b></p>
 </div>
