--- a/OdysseyRegistration/OdysseyCoreMvc/Views/TournamentRegistration/Error.cshtml
+++ b/OdysseyRegistration/OdysseyCoreMvc/Views/TournamentRegistration/Error.cshtml
@@ -1,5 +1,7 @@
-﻿<%@ Page Language="C#" MasterPageFile="~/Views/Shared/Site.Master" Inherits="System.Web.Mvc.ViewPage<VaOdysseyMVC2.ViewData.BaseViewData>" %>
+﻿@page
 
+@*<%@ Page Language="C#" MasterPageFile="~/Views/Shared/Site.Master" Inherits="System.Web.Mvc.ViewPage<VaOdysseyMVC2.ViewData.BaseViewData>" %>
+*@
 <asp:Content ID="errorTitle" ContentPlaceHolderID="TitleContent" runat="server">
     <%= Model.FriendlyRegistrationName %>
     Error Occurred
