--- a/OdysseyRegistration/OdysseyCoreMvc/Views/TournamentRegistration/Page09.cshtml
+++ b/OdysseyRegistration/OdysseyCoreMvc/Views/TournamentRegistration/Page09.cshtml
@@ -73,7 +73,7 @@
         <label>
             Judge's ID Number:
         </label>
-        @Html.TextBox("JudgeID", Model.TournamentRegistration.JudgeID, new { ReadOnly = "readonly" })
+        @Html.TextBox("JudgeID", Model.TournamentRegistration.JudgeId, new { ReadOnly = "readonly" })
     </p>
     <p>
         <label>
