--- a/OdysseyRegistration/OdysseyCoreMvc/Views/TournamentRegistration/Page10.cshtml
+++ b/OdysseyRegistration/OdysseyCoreMvc/Views/TournamentRegistration/Page10.cshtml
@@ -120,7 +120,7 @@
                 </td>
             </tr>
             <tr><td><input type="hidden" name="on1" value="Team's Tournament ID">Team's Tournament ID</td></tr>
-            <tr><td><input type="text" name="os1" maxlength="200" value="@Model.TournamentRegistration.TeamID"></td></tr>
+            <tr><td><input type="text" name="os1" maxlength="200" value="@Model.TournamentRegistration.TeamId"></td></tr>
             <tr><td><input type="hidden" name="on2" value="Coach's Last Name">Coach's Last Name</td></tr>
             <tr><td><input type="text" name="os2" maxlength="200" value="@Model.TournamentRegistration.CoachLastName"></td></tr>
         </table>
