--- a/OdysseyRegistration/OdysseyCoreMvc/Views/Shared/BadEmail.cshtml
+++ b/OdysseyRegistration/OdysseyCoreMvc/Views/Shared/BadEmail.cshtml
@@ -11,7 +11,7 @@
     //          11/10/2013: v3.0 Rebuilt in ASP.NET MVC 4
 }
 
-@model OdysseyCoreMvc.ViewData.BaseViewData
+@model OdysseyCoreMvc.Pages.BasePageModel
 
 @{
     ViewBag.Title = "Bad E-mail Provided for " + Model.FriendlyRegistrationName;
