--- a/OdysseyRegistration/OdysseyCoreMvc/Views/Shared/Soon.cshtml
+++ b/OdysseyRegistration/OdysseyCoreMvc/Views/Shared/Soon.cshtml
@@ -1,4 +1,4 @@
-﻿@model OdysseyCoreMvc.ViewData.BaseViewData
+﻿@model OdysseyCoreMvc.Pages.BasePageModel
 
 @{
     ViewBag.Title = @Model.FriendlyRegistrationName + " Is Coming Soon";
