--- a/OdysseyRegistration/OdysseyCoreMvc/Views/Shared/TournamentRegistration/EmailPartial.cshtml
+++ b/OdysseyRegistration/OdysseyCoreMvc/Views/Shared/TournamentRegistration/EmailPartial.cshtml
@@ -1,4 +1,5 @@
-﻿@model OdysseyCoreMvc.ViewData.TournamentRegistration.Page10ViewData
+﻿@model OdysseyCoreMvc.Pages.TournamentRegistration.Page10Model
+
 <div id=contentstart>
     <p style="text-align: center"><b>You have been assigned Team ID @Model.TournamentRegistration.TeamId.</b></p>
     <p>Dear Coach @Model.TournamentRegistration.CoachLastName,</p>
