--- a/OdysseyRegistration/OdysseyCoreMvc/Pages/Index.cshtml
+++ b/OdysseyRegistration/OdysseyCoreMvc/Pages/Index.cshtml
@@ -8,4 +8,5 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     <p>Registration Home Page</p>
+    <a asp-page="/JudgesRegistration">Judges Registration</a>
 </div>
